--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,34 +1,81 @@
 /* Header.css */
 .header-container {
-    padding: 20px;
-    background-color: #28467A; /* 배경색 설정 */
+    padding: 10px;
+    background-color: #28467A;
+    color: white;
+    height: 60px; /* 헤더 높이 */
+    display: flex; /* Flexbox 사용 */
+    align-items: center; /* 수직 가운데 정렬 */
+    justify-content: space-between; /* 양 끝 정렬 */
+}
+
+.logo-h-container {
+    margin-left: 35px; /* 로고 이미지를 왼쪽에서 8px 떨어지도록 설정 */
+}
+
+.logo-h-link {
+    display: flex; /* Flexbox 사용 */
+    flex-direction: column; /* 수직 정렬 */
+    align-items: center; /* 로고 이미지와 텍스트 수평 가운데 정렬 */
+    text-decoration: none; /* 링크의 기본 밑줄 제거 */
+}
+
+.logo-h-container span {
+    color: white; /* 텍스트를 하얀색으로 */
+    font-size: 14px; /* 텍스트 크기 조정 */
+    margin-top: -20px;
+    margin-bottom: 20px;
+}
+
+.mainImage {
+    width: 80px; /* 이미지 크기 축소 */
+    height: 80px; /* 이미지 크기 축소 */
 }
 
 .nav-list {
     list-style: none;
     display: flex;
-    flex-direction: row; /* 가로 방향으로 정렬 */
-    gap: 20px; /* 항목 간 간격 */
-    justify-content: flex-start; /* 왼쪽 정렬 */
+    flex-direction: row;
+    gap: 50px; /* 항목 간 간격 조정 */
+    height: auto;
+    margin-top: -3px;
+    text-decoration: none; /* 링크의 기본 밑줄 제거 */
 }
 
 .nav-item {
-    text-align: center; /* 텍스트 가운데 정렬 */
-}
-
-.nav-item img {
-    width: 100px; /* 이미지 크기 조정 */
-    height: 100px; /* 이미지 크기 조정 */
-    display: block; /* 블록 요소로 설정 */
-    margin-right: auto; /* 이미지를 왼쪽으로 붙이기 위해 오른쪽 마진 자동 설정 */
+    display: flex; /* Flexbox 사용 */
+    align-items: center; /* 아이콘과 텍스트 수직 가운데 정렬 */
+    text-align: center;
+    padding: 15px;
 }
 
 .nav-item span {
-    display: block; /* 블록 요소로 설정하여 텍스트를 이미지 아래로 배치 */
-    margin-top: 10px; /* 텍스트와 이미지 간 간격 */
     color: white;
+    font-size: 14px; /* 텍스트 크기 조정 */
 }
 
-.nav-item:not(:first-child) {
-    margin-left: 40px; /* 첫 번째 항목을 제외한 나머지 항목에 왼쪽 마진 추가 */
+.log-container {
+    display: flex; /* Flexbox 사용 */
+    align-items: center; /* 아이콘과 텍스트 수직 가운데 정렬 */
+    justify-content: space-between; /* 로그인, 회원가입 간격 조정 */
+    margin-right: 30px;
+    gap: 15px; /* 로그인/회원가입 간격 조정 */
+}
+
+.login-container,
+.sign-container {
+    display: flex; /* Flexbox 사용 */
+    align-items: center; /* 아이콘과 텍스트 수직 가운데 정렬 */
+    text-decoration: none; /* 링크의 기본 밑줄 제거 */
+}
+
+.log-container img {
+    width: 25px; /* 로그아웃 아이콘 크기 */
+    height: 25px; /* 로그아웃 아이콘 크기 */
+    margin-right: 5px; /* 이미지와 텍스트 간 간격 */
+}
+
+.log-container span {
+    color: white; /* 텍스트를 하얀색으로 */
+    font-size: 14px; /* 텍스트 크기 */
 }
