[FIX, STYLE, FEAT] 모달창 위치 조정 진료기록 '리뷰쓰기' 모달창 구현 진료기록 '리뷰쓰기' 작성 후 리뷰 나의 후기 페이지로 이동 구현 이미 작성한 리뷰 '리뷰쓰기'버튼 숨김 처리 리뷰 작성 후 '리뷰쓰기' 한 번에 다 삭제되는 거 작성한 해당 리뷰에 대한 내용만 사라지게 수정

--- a/src/css/MyReviews.css
+++ b/src/css/MyReviews.css
@@ -59,11 +59,12 @@
 
 /* 모달 CSS */
 .modal-overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+    transform: translate(50px, -10px);
     display: flex;
     justify-content: center;
     align-items: center;
