--- a/src/css/ClinicHistory.css
+++ b/src/css/ClinicHistory.css
@@ -25,7 +25,7 @@
 }
 
 /* 리뷰 쓰기 버튼 스타일 */
-.review-btn {
+.reviewUpdatebutton{
     background-color: white;
     color: black;
     border-color: #43ABAE;
