[STYLE] 마이페이지 간격 수정

--- a/src/css/component/MyPage.css
+++ b/src/css/component/MyPage.css
@@ -25,6 +25,7 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #EFEEF4;
+    transform: translateY(-60px);
 }
 
 .page-content {
