--- a/src/css/user/Login.css
+++ b/src/css/user/Login.css
@@ -29,7 +29,7 @@
 }
 
 
-#login-id {
+#loginForm1 {
     box-sizing: border-box;
     position: absolute;
 
@@ -49,7 +49,7 @@
     text-align: left;
 }
 
-#login-pwd {
+#loginForm2 {
     box-sizing: border-box;
     position: absolute;
 
@@ -89,6 +89,12 @@
     text-align: center;
 
     color: #FFFFFF;
+}
+
+#login-button:hover {
+    background-color: #0056b3;
+    transform: scale(1.05);
+    cursor: pointer;
 }
 
 #find-ID {
